fix(prod): complete Render frontend/backend production cleanup